Use 100% width for landscape views and 100vh for portrait

--- a/src/components/CameraPreview/CameraPreview.scss
+++ b/src/components/CameraPreview/CameraPreview.scss
@@ -1,3 +1,11 @@
 .camera-preview {
   text-align: center;
+
+  &__image {
+    width: 100%;
+    @media (max-width:480px) {
+      height: 100vh;
+      width: auto;
+    }
+  }
 }
