--- a/src/components/CameraPreview/CameraPreview.scss
+++ b/src/components/CameraPreview/CameraPreview.scss
@@ -17,4 +17,29 @@
     top: 0px;
     left: 0px;
   }
+
+  &__footer {
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+    background-color: white;
+    width: 100%;
+
+    div {
+      width: calc(50% - 41px);
+      text-align: center;
+      font-size: 20px;
+      font-weight: bolder;
+      padding: 20px;
+    }
+
+    &__button-left {
+      float: left;
+    }
+
+    &__button-right {
+      float: right;
+      border-left: 2px solid black;
+    }
+  }
 }
